--- a/src/front/src/index.css
+++ b/src/front/src/index.css
@@ -5,12 +5,12 @@ html {
     background-color: white;
     color: white;
     outline: 2px;
-    color: white; /* Text color */
-    text-shadow:
+    color: teal; /* Text color */
+    /* text-shadow:
         -3px -3px 0 #000,
         3px -3px 0 #000,
         -3px 3px 0 #000,
-        3px 3px 0 #000; /* Outline effect */
+        3px 3px 0 #000;  Outline effect */
 }
 
 .game-bar {
@@ -79,9 +79,7 @@ button {
     background-color: #f0f0f0;
     cursor: pointer;
     color: black;
-    transition:
-        background-color 0.3s,
-        transform 0.3s; /* Add transform to the transition */
+    transition: background-color 0.3s, transform 0.3s; /* Add transform to the transition */
 }
 
 .button-group {
@@ -106,9 +104,7 @@ input {
     cursor: pointer;
     margin: 0;
     padding: 0px;
-    transition:
-        background-color 0.3s,
-        transform 0.3s; /* Add transform to the transition */
+    transition: background-color 0.3s, transform 0.3s; /* Add transform to the transition */
 }
 
 button:hover {
@@ -129,7 +125,5 @@ button:hover {
 
     color: black;
     cursor: pointer;
-    transition:
-        background-color 0.3s,
-        transform 0.3s; /* Add transform to the transition */
+    transition: background-color 0.3s, transform 0.3s; /* Add transform to the transition */
 }
