--- a/src/front/src/App.css
+++ b/src/front/src/App.css
@@ -1,1 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Rubik+Scribble&family=Rubik+Spray+Paint&display=swap');
