--- a/src/front/src/index.css
+++ b/src/front/src/index.css
@@ -3,14 +3,13 @@ html {
     padding: 0;
     margin: 0;
     background-color: white;
-    color: white;
+    color: black;
     outline: 2px;
-    color: white; /* Text color */
-    text-shadow:
-        -3px -3px 0 #000,
-        3px -3px 0 #000,
-        -3px 3px 0 #000,
-        3px 3px 0 #000; /* Outline effect */
+    font-family: "Lilita One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    word-spacing: 10px;
+    
 }
 
 .game-bar {
@@ -19,8 +18,7 @@ html {
     height: 50px;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Rubik+Scribble&family=Rubik+Spray+Paint&display=swap');
 .screen-title {
     backdrop-filter: blur(10px);
     position: fixed;
@@ -33,14 +31,15 @@ html {
     justify-content: center;
     align-items: center;
 
-    font-family: "Press Start 2P", system-ui;
     font-weight: 400;
     font-style: normal;
     z-index: 1000;
 }
 
 .screen-title h1 {
-    font-size: 70px;
+    font-size: 100px;
+    letter-spacing: 5px;
+    font-weight: bolder;
 }
 
 .screen-title h2 {
@@ -50,7 +49,6 @@ html {
 }
 
 .screen-title p {
-    color: white;
     font-size: 15px;
     font-weight: bolder;
     word-spacing: -1px;
@@ -69,7 +67,6 @@ button {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-family: "Press Start 2P", system-ui;
     font-weight: 400;
     font-style: normal;
     font-size: larger;
@@ -95,7 +92,6 @@ input {
     display: flex;
     width: 100px;
     align-items: center;
-    font-family: "Press Start 2P", system-ui;
     font-weight: 400;
     font-style: normal;
     font-size: larger;
@@ -120,7 +116,6 @@ button:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-family: "Press Start 2P", system-ui;
     font-weight: 400;
     font-style: normal;
     font-size: larger;
