front screen  re-implement

--- a/src/front/global.css
+++ b/src/front/global.css
@@ -74,3 +74,21 @@
     @apply bg-background text-foreground;
   }
 }
+
+.screen-title {
+  backdrop-filter: blur(10px);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  font-weight: 400;
+  font-style: normal;
+  z-index: 1000;
+}
+
