--- a/src/front/global.css
+++ b/src/front/global.css
@@ -95,15 +95,17 @@
 @font-face {
   font-family: 'Aux Mono';
   src: local('Aux Mono Regular'), local('Aux-Mono-Regular'),
-      url('/AuxMono-Regular.woff2') format('woff2'),
-      url('/AuxMono-Regular.woff') format('woff'),
-      url('/AuxMono-Regular.ttf') format('truetype');
+    url('LilitaOne-Regular.woff2') format('woff2'),
+    url('LilitaOne-Regular.woff') format('woff'),
+    url('LilitaOne-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
+ 
 }
 
 body {
   font-family: 'Aux Mono';
-  letter-spacing: 0px;
+  letter-spacing: 1px;
+
 }
 
