--- a/src/front/public/fonts/style.css
+++ b/src/front/public/fonts/style.css
@@ -1,9 +1,9 @@
 @font-face {
     font-family: 'Aux Mono';
     src: local('Aux Mono Regular'), local('Aux-Mono-Regular'),
-        url('fonts/LilitaOne-Regular.woff2') format('woff2'),
-        url('fonts/LilitaOne-Regular.woff') format('woff'),
-        url('fonts/LilitaOne-Regular.ttf') format('truetype');
+        url('LilitaOne-Regular.woff2') format('woff2'),
+        url('LilitaOne-Regular.woff') format('woff'),
+        url('LilitaOne-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
   }
